--- a/style.css
+++ b/style.css
@@ -255,3 +255,101 @@ h3{color: white;
 .SM:hover {background-color: red;
 }
 /* contact */
+.contact-left{flex-basis: 35%;
+}
+
+.contact-right{flex-basis: 60%;
+}
+
+.contact-left p{margin-top: 30px;
+}
+
+.contact-left p i {color: red;
+                   margin-right: 15px;
+                   font-size: 20px;
+}
+
+.social-icons{margin-top: 30px;
+}
+
+.social-icons a {text-decoration: none;
+                 font-size: 20px;
+                 margin-right: 15px;
+                 color: rgb(171, 154, 154);
+                 display: inline-block;
+                 transition: transform 0.5s;
+}
+
+.social-icons a :hover{color: red;
+                       transform: translateY(-5px);
+}
+
+.contact-right form {   width: 100%;  
+}
+
+form input, form textarea {width: 100%;
+         border: 0;
+         outline: none;
+         background-color: rgb(79, 72, 72);
+         padding: 15px;
+         margin: 15px 0;
+         color: white;
+         font-size: 18px;
+         border-radius: 6px;
+}
+
+.SM-2{background-color:red;
+      border-color: white;
+      width: 150px; 
+      height: 50px;
+      border-radius: 6px;
+      cursor: pointer;
+}
+
+.copyright{width: 100%;
+           text-align: center;
+           padding: 25px 0;
+           background-color: rgb(80, 70, 70);
+           font-weight: 300;
+           margin-top: 20px;
+}
+
+.copyright i {color: red;
+}
+
+/* css for small screen */
+nav .fas{display: none;
+         color: white;
+}
+
+@media only screen and (max-width:600px){
+        #header{
+                background-image: url(https://wallpapercave.com/wp/wp3988340.jpg);
+        }
+        .header-text {margin-top: 100%;
+                      font-size: 16px;
+        }
+        .header-text h1{font-size: 30px;
+        }
+        nav .fas {display: block;
+                  font-size: 25px;
+        }
+        nav ul {background-color: red;
+                position: fixed;
+                top: 0;
+                right: -200px;
+                width: 200px;
+                height: 100vh;
+                padding-top: 50px;
+                z-index: 2;
+                transition: right 0.5s;
+        }
+       nav ul li{display: block;
+                 margin: 25px;
+       }
+       nav ul .fas {position: absolute;
+                    top: 25px;
+                    left: 25px;
+                    cursor: pointer;
+       }
+}
